syntax = "proto3";

package protobuf;

option go_package = "github.com/ytake/protoactor-go-cqrs-example/pkg/event";

message UserCreated {
  string userName = 1;
  string email = 2;
  string userID = 3;
}
